# kernel-supported-neural-networks

./: NW_NN.py  README.md  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements.txt  run.py
.github/workflows/: pytest.yaml  test.yaml
configs/: experiment.yaml
configs/data/: dynamic.yaml  nonlinear-dynamics.yaml  silverbox.yaml  sine-function.yaml  static.yaml  sum-of-gaussians.yaml  toy.yaml  wh.yaml
data/: README.md
data/csv/: static-nonlinear.csv  toy.csv
examples/: example.ipynb
notebooks/: datasets.ipynb  nonlinear-dynamics.ipynb  sine-function.ipynb  sum-of-gaussians.ipynb  wiener-hammerstein.ipynb
runner/: reporters.py
src/: __init__.py  models.py  shared.py
src/data/: __init__.py  generate.py
src/models/: hybrid.py  kernel.py
src/models/kernel/: __init__.py  numpy.py  torch.py
src/models/network/: activations.py
src/nonparametric/: README.md  functional.py  kernels.py
src/runner/: models.py  plots.py
src/training/: README.md  loss.py  module.py  utils.py
tests/: README.md  test_activation.py  test_data.py  test_estimators.py  test_functional.py  test_kernel.py  test_kernels.py  test_loss.py  test_utils.py
tests/resources/: test.csv  train.csv
tests/test_memory/: conftest.py  test_k_neighbours_memory.py  test_radius_neighbours_memory.py  test_transformations.py
